--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ androidx-camera = "1.4.1"
 coroutines = "1.10.2"
 plaid = "4.1.0"
 security-crypto = "1.1.0-alpha06"
+onnxruntime = "1.19.2"
 
 
 [libraries]
@@ -52,6 +53,7 @@ sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sq
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 plaid-android = { module = "com.plaid.link:sdk-core", version.ref = "plaid" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "security-crypto" }
+onnxruntime-android = { module = "com.microsoft.onnxruntime:onnxruntime-android", version.ref = "onnxruntime" }
 
 
 [plugins]
